asm_tests/other_testfiles/invalid_files/error44.s
.name "MORO"
.comment "MORJESTA!"

livee %12
